<resources>
    <string name="app_name">MangaKakalot</string>
    <string name="bookmark">Manga Cover</string>
    <string name="titulo">Manga Titulo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BtnNext">Last Cap</string>
    <string name="tvultimoleido">Ultimo Leido 1</string>
    <string name="tvactual"> </string>
    <string name="Viewed">Viewed  : </string>
    <string name="Current">Current : </string>
    <string name="imagen">imagenmanga</string>
    <string name="NoInternet">No Internet Connection Found. \n Check your internet connection</string>
    <string name="NoInternetButton">Try again...</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reload">Reload</string>
    <string name="oppss">Oppss !!</string>
</resources>